--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-  <h1> Felipe <div> </div> del Canto   </h1>
+  <h1> Felipe del Canto   </h1>
 
   <p><strong> MATH · ECON </strong></p>
 
-  <img src="_resources/images/portrait.jpeg" alt="An image of myself smiling, in front of a fountain in Budapest." height="300px">
+  <img src="./images/portrait.jpeg" alt="An image of myself smiling, in front of a fountain in Budapest." height="300px">
 
   <p> I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics. In particular, I am looking to study the use of pattern recognition algorithms to make sense of unstructured data like text, images or videos. </p>
 
