Navigation bar and some colors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 
   <link rel="stylesheet" type="text/css" href="styles.css">
 
+<div class="topnav">
+  <nav>
+  <a class="active" href="index.html">HOME</a>
+  <a href="cv.html">CV</a>
+  </nav>
+</div>
+
 </head>
 
 <body>
