--- a/cv.html
+++ b/cv.html
@@ -9,6 +9,13 @@
 
   <link rel="stylesheet" type="text/css" href="styles.css">
 
+  <div class="topnav">
+    <nav>
+    <a href="index.html">HOME</a>
+    <a class="active" href="cv.html">CV</a>
+    </nav>
+  </div>
+
 </head>
 
 <body>
@@ -17,15 +24,6 @@
   <h1> Education </h1>
 
   <p> I am <b> highly </b> educated... yessss </p>
-
-  <table>
-    <tr>
-      <td>Row 1 - Column 1</td> <td>Row 1 - Column 2 </td>
-    </tr>
-    <tr>
-      <td>Row 2 - Column 1</td> <td>Row 2 - Column 2</td>
-    </tr>
-  </table>
 
 </body>
 
