--- a/index.html
+++ b/index.html
@@ -1,33 +1,105 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
+
 <head>
-  <title>Felipe del Canto's webpage</title>
-
   <meta charset="utf-8">
-  <meta name="description" content="This is my first webpage. You can see information about myself here.">
-  <meta name="author" content="Felipe del Canto">
-
-  <link rel="stylesheet" type="text/css" href="styles.css">
-
-<div class="topnav">
-  <nav>
-  <a class="active" href="index.html">HOME</a>
-  <a href="cv.html">CV</a>
-  </nav>
-</div>
-
+  <meta name="description" content="This my personal webpage, where you can find my recent work and my CV.">
+  <title>Felipe's Personal Site</title>
 </head>
 
 <body>
-  <h1> Felipe del Canto   </h1>
+  <table cellspacing="20">
+    <tr>
+      <td> <img src="images/felipe.png" alt="Felipe profile picture" height="200px">
+      </td>
+      <td>
+        <h1> Felipe del Canto</h1>
+        <p><em>Adjunct Instructor at <a href="https://economia.uc.cl"><strong>IE-UC</strong></a></em></p>
+        <p> I am a Mathematician and Economist from PUC-Chile currently teaching there. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics. In particular, I am looking to study
+          the
+          use of pattern recognition algorithms to make sense of unstructured data like text, images or videos. </p>
+        <p><a href="contact.html">Contact me</a></p>
+      </td>
+    </tr>
+  </table>
 
-  <p><strong> MATH · ECON </strong></p>
+  <hr>
+  <h3> Teaching </h3>
+  <ul>
+    <li> Principles of Economics (EAE105A): Fall 2020.</li>
+    <li> Principles of Economics (EAE105A): Spring 2020 and Fall 2021.</li>
+    <li> Math Applications to Economics and Business (EAF2010): Spring 2020 and Fall 2021.</li>
+  </ul>
 
-  <img src="./images/portrait.jpeg" alt="An image of myself smiling, in front of a fountain in Budapest." height="300px">
+  <hr>
+  <h3>Work Experience</h3>
+  <table cellspacing="10">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Position</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2020 - Present</td>
+        <td>Adjunct Instructor at PUC-Chile</td>
+      </tr>
+      <tr>
+        <td>2017 - 2018</td>
+        <td>Research Assistant at FONDECYT project number 1170178</td>
+      </tr>
+    </tbody>
+  </table>
 
-  <p> I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics. In particular, I am looking to study the use of pattern recognition algorithms to make sense of unstructured data like text, images or videos. </p>
-
- <p> You can see my CV <a href="cv.html"> here.</a> </p>
+  <hr>
+  <h3>Skills</h3>
+  <table cellspacing="5">
+    <tbody>
+      <tr>
+        <td>Mathematical Analysis</td>
+        <td> ⭐⭐⭐⭐⭐</td>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        <td>Python</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Economic Theory</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>&nbsp;</td>
+        <td>Stata</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Econometrics</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td></td>
+        <td>MATLAB</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Applied Microeconomics</td>
+        <td>⭐⭐⭐⭐</td>
+        <td></td>
+        <td>Unity</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>iOS Development</td>
+        <td>⭐⭐⭐</td>
+        <td></td>
+        <td>C#</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Web Development</td>
+        <td>⭐⭐</td>
+        <td></td>
+        <td>Swift</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 
 </html>
