--- a/index.html
+++ b/index.html
@@ -3,103 +3,131 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="This my personal webpage, where you can find my recent work and my CV.">
+
+  <!-- @ Head  -->
   <title>Felipe's Personal Site</title>
-</head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td> <img src="images/felipe.png" alt="Felipe profile picture" height="200px">
-      </td>
-      <td>
-        <h1> Felipe del Canto</h1>
-        <p><em>Adjunct Instructor at <a href="https://economia.uc.cl"><strong>IE-UC</strong></a></em></p>
-        <p> I am a Mathematician and Economist from PUC-Chile currently teaching there. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics. In particular, I am looking to study
-          the
-          use of pattern recognition algorithms to make sense of unstructured data like text, images or videos. </p>
-        <p><a href="contact.html">Contact me</a></p>
-      </td>
-    </tr>
-  </table>
+  <!-- @ CSS Stylesheets -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
+
+  <!--@ Font Awesome -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
+  <!-- Bootstrap Scripts -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<body data-bs-spy="scroll" data-bs-target="#navbar-scroll">
+
+  <!-- @ Nav Bar -->
+  <nav class="navbar fixed-top navbar-expand-md navbar-dark navbar-coloration navbar-container">
+
+    <div class="container-fluid" id="navbar-scroll">
+
+      <a class="navbar-brand" href="">
+        <h3>Felipe del Canto</h3>
+      </a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarToggler">
+
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="active nav-link js-scroll-trigger" aria-current="page" href="#about-me">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#research">Research</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="teaching.html">Teaching</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="teaching.html">Courses</a>
+          </li>
+        </ul>
+      </div>
+  </nav>
+
+  <!-- @ About me Section -->
+  <section class="centered-section" id="about-me">
+
+    <!-- @ About me -->
+    <div class="row container-fluid">
+
+      <div class="image-container col-md-5">
+        <img class="title-image" src="images/felipe.png" alt="Felipe profile picture">
+
+        <div class="personal-icons">
+          <a href="http://github.com/pipeton8"><i class="personal-icon fab fa-github fa-lg"></i></a>
+          <a href="mailto:felipe.delcanto@icloud.com"><i class="personal-icon fas fa-envelope fa-lg"></i></a>
+          <a href="http://twitter.com/pipeton8"><i class="personal-icon fab fa-twitter fa-lg"></i></a>
+        </div>
+      </div>
+
+      <div class="about-me-text col-md-7">
+        <p> I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        </p>
+
+        <p>In particular, I am looking to study: 1) the use of
+          state-of-the-art Machine and Deep learning algorithms to make sense of unstructured data like text, images, videos, or sounds; 2) learn how to make causal inference with these tools, and 3) understand the role of these techniques in our
+          society, specifically how they preserve our biases.
+        </p>
+        <p>You can reach me at <a href="mailto:felipe.delcanto@icloud.com">felipe.delcanto@icloud.com</a>.</p>
+
+        <p>You can also look at my <a href="https://github.com/pipeton8/CV/blob/master/CV/Felipe%20Del%20Canto%20CV.pdf">CV here</a>.</p>
+
+      </div>
+
+    </div>
+    </div>
+  </section>
 
   <hr>
-  <h3> Teaching </h3>
-  <ul>
-    <li> Principles of Economics (EAE105A): Fall 2020.</li>
-    <li> Principles of Economics (EAE105A): Spring 2020 and Fall 2021.</li>
-    <li> Math Applications to Economics and Business (EAF2010): Spring 2020 and Fall 2021.</li>
-  </ul>
 
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Position</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2020 - Present</td>
-        <td>Adjunct Instructor at PUC-Chile</td>
-      </tr>
-      <tr>
-        <td>2017 - 2018</td>
-        <td>Research Assistant at FONDECYT project number 1170178</td>
-      </tr>
-    </tbody>
-  </table>
+  <!-- @ Research Section -->
+  <section class="left-aligned-section" id="research">
+    <div class="container-fluid">
 
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing="5">
-    <tbody>
-      <tr>
-        <td>Mathematical Analysis</td>
-        <td> ⭐⭐⭐⭐⭐</td>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-        <td>Python</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Economic Theory</td>
-        <td>⭐⭐⭐⭐⭐</td>
-        <td>&nbsp;</td>
-        <td>Stata</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Econometrics</td>
-        <td>⭐⭐⭐⭐⭐</td>
-        <td></td>
-        <td>MATLAB</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Applied Microeconomics</td>
-        <td>⭐⭐⭐⭐</td>
-        <td></td>
-        <td>Unity</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>iOS Development</td>
-        <td>⭐⭐⭐</td>
-        <td></td>
-        <td>C#</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Web Development</td>
-        <td>⭐⭐</td>
-        <td></td>
-        <td>Swift</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-    </tbody>
-  </table>
+      <div class="row">
+        <div class="col-12">
+          <h2>Research</h2>
+        </div>
+        <div class="col-12">
+          <h6>Courses taught at PUC-Chile:</h6>
+        </div>
+        <div class="col-4">
+          Principles of Economics (EAE105A):
+
+        </div>
+        <div class="col-6">
+          Fall 2020
+
+        </div>
+
+      </div>
+
+
+
+    </div>
+
+  </section>
+
+  <!-- @Footer -->
+  <section class="centered-section" id="footer">
+    <div class="container-fluid">
+      <p>© 2021 Felipe del Canto</p>
+    </div>
+
+    </div>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
