--- a/index.html
+++ b/index.html
@@ -1,66 +1,70 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" style="scroll-behavior:auto;">
 
 <head>
   <meta charset="utf-8">
 
   <!-- @ Head  -->
-  <title>Felipe's Personal Site</title>
+  <title>Felipe del Canto</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <meta name="description" content="Felipe del Canto's personal page. Mathematician and Economist. My main interests are in the intersection between Computer Science and Economics.">
+  <meta name="keywords" content="Felipe, del Canto, Economics, Chile, Computer Science, Econ, CS">
+
+  <!-- <link rel="shortcut icon" href=""> -->
+
   <!-- @ CSS Stylesheets -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 
   <!--@ Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
-  <!-- Bootstrap Scripts -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</head>
 
-<body data-bs-spy="scroll" data-bs-target="#navbar-scroll">
+<body data-bs-spy="scroll" data-bs-target="#navbar-spy-scroll" data-bs-offset="250" data-bs-method="offset">
 
   <!-- @ Nav Bar -->
-  <nav class="navbar fixed-top navbar-expand-md navbar-dark navbar-coloration navbar-container">
+  <nav class="navbar fixed-top navbar-expand-md navbar-dark navbar-coloration">
 
-    <div class="container-fluid" id="navbar-scroll">
+    <div class="container-fluid" id="navbar-spy-scroll">
 
       <a class="navbar-brand" href="">
         <h3>Felipe del Canto</h3>
       </a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-expanded="false">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarToggler">
 
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="active nav-link js-scroll-trigger" aria-current="page" href="#about-me">About me</a>
+            <a class="active nav-link" href="#about-me">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#research">Research</a>
+            <a class="nav-link" href="#research">Research</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="teaching.html">Teaching</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="teaching.html">Courses</a>
+            <a class="nav-link" href="coursework.html">Coursework</a>
           </li>
         </ul>
       </div>
+    </div>
   </nav>
 
   <!-- @ About me Section -->
   <section class="centered-section" id="about-me">
 
     <!-- @ About me -->
-    <div class="row container-fluid">
+    <div class="row container-fluid section-container">
 
-      <div class="image-container col-md-5">
+      <div class="image-container col-lg-5 col-md-6">
         <img class="title-image" src="images/felipe.png" alt="Felipe profile picture">
 
         <div class="personal-icons">
@@ -70,7 +74,7 @@
         </div>
       </div>
 
-      <div class="about-me-text col-md-7">
+      <div class="about-me-text col-lg-7 col-md-6">
         <p> I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
         </p>
 
@@ -78,56 +82,110 @@
           state-of-the-art Machine and Deep learning algorithms to make sense of unstructured data like text, images, videos, or sounds; 2) learn how to make causal inference with these tools, and 3) understand the role of these techniques in our
           society, specifically how they preserve our biases.
         </p>
-        <p>You can reach me at <a href="mailto:felipe.delcanto@icloud.com">felipe.delcanto@icloud.com</a>.</p>
-
-        <p>You can also look at my <a href="https://github.com/pipeton8/CV/blob/master/CV/Felipe%20Del%20Canto%20CV.pdf">CV here</a>.</p>
-
+        <p>You can look at my <a href="https://github.com/pipeton8/CV/blob/master/CV/Felipe%20Del%20Canto%20CV.pdf">CV here</a>.</p>
       </div>
-
-    </div>
     </div>
   </section>
 
-  <hr>
 
   <!-- @ Research Section -->
   <section class="left-aligned-section" id="research">
-    <div class="container-fluid">
+    <div class="container-fluid section-container">
+      <div class="research-subsection">
 
-      <div class="row">
-        <div class="col-12">
-          <h2>Research</h2>
-        </div>
-        <div class="col-12">
-          <h6>Courses taught at PUC-Chile:</h6>
-        </div>
-        <div class="col-4">
-          Principles of Economics (EAE105A):
+        <h1 class="section-title">Published Papers</h1>
 
-        </div>
-        <div class="col-6">
-          Fall 2020
-
+        <div class="research-element">
+          <div class="mr-auto paper-title">
+            <a class="paper-link"
+              href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwi20O2Yk530AhWukHIEHS_hBVoQFnoECAkQAQ&url=https%3A%2F%2Flink.springer.com%2Farticle%2F10.1007%2Fs11750-020-00578-7&usg=AOvVaw39uCs8L6jrjrceWZHTlXiB">
+              <h5>The effect of regularization in portfolio selection problems</h5>
+            </a>
+          </div>
+          <div class="mr-auto paper-collaborators">
+            with <a class="collaborator-link" href="https://www.researchgate.net/profile/Bernardo-Pagnoncelli">Bernardo Pagnoncelli</a> and <a class="collaborator-link" href="https://arturocifuentes.com/">Arturo Cifuentes</a>
+          </div>
+          <div class="mr-auto paper-journal">
+            <i>TOP</i>, Volume 29, 2021, Pages 156-176
+          </div>
         </div>
 
       </div>
 
 
+      <div class="research-subsection">
+        <h1 class="section-title">Working Papers</h1>
 
+        <div class="research-element">
+          <div class="mr-auto paper-title">
+            <h5>You shall not stack: How not to measure interdimensional dependence among the poor</h5>
+            </a>
+          </div>
+          <div class="mr-auto paper-journal">
+            2021
+          </div>
+        </div>
+      </div>
     </div>
-
   </section>
 
   <!-- @Footer -->
-  <section class="centered-section" id="footer">
+  <footer class="centered-section" id="footer">
     <div class="container-fluid">
       <p>© 2021 Felipe del Canto</p>
-    </div>
+  </footer>
 
-    </div>
-  </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <!-- @JS and Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+  <!-- @jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <!-- @ Additional Scripts -->
+  <script>
+  $(document).ready(function(){
+    // Add smooth scrolling to all links
+    $("a").on('click', function(event) {
+
+      // Make sure this.hash has a value before overriding default behavior
+      if (this.hash !== "") {
+        // Prevent default anchor click behavior
+        event.preventDefault();
+
+        // Store hash
+        var hash = this.hash;
+
+        // Using jQuery's animate() method to add smooth page scroll
+        // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+        $('html, body').animate({
+          scrollTop: $(hash).offset().top
+        }, 400, function(){
+
+          // Add hash (#) to URL when done scrolling (default click behavior)
+          window.location.hash = hash;
+        });
+      } // End if
+    });
+  });
+  </script>
+
+  <!-- @Collapse NavBar on click -->
+  <script type="text/javascript">
+    const navLinks = document.querySelectorAll('.nav-item:not(.dropdown)')
+    const menuToggle = document.getElementById('navbarToggler')
+    const bsCollapse = new bootstrap.Collapse(menuToggle, {
+      toggle: false
+    })
+    navLinks.forEach(function(l) {
+      l.addEventListener('click', function() { // avoid flickering on desktop
+        if (menuToggle.classList.contains('show')) {
+          bsCollapse.toggle()
+        }
+      })
+    })
+  </script>
 </body>
 
 </html>
