--- a/teaching.html
+++ b/teaching.html
@@ -71,8 +71,147 @@
       <div class="course-container">
         <h3 class="course-title"> EAE105A - Principles of Economics (in Spanish)</h3>
 
+        <!-- @Class 1 -->
+        <div class="row row-cols-2 row-cols-md-3 row-cols-xl-4 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Class 1</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Motivation</h6>
+                <p class="card-text">Description</p>
+              </div>
+              <div class="card-footer border-top-0 bg-transparent text-center">
+
+                <a class="btn btn-dark btn-sm download-button">Slides</a>
+                <a class="btn btn-danger btn-sm download-button">Recording</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- @ Class 2 -->
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Class 2</h5>
+                <h6 class="card-subtitle mb-2 text-muted">General Concepts</h6>
+                <p class="card-text">Description</p>
+              </div>
+              <div class="card-footer border-top-0 bg-transparent text-center">
+
+                <a class="btn btn-dark btn-sm download-button">Slides</a>
+                <a class="btn btn-danger btn-sm download-button">Recording</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- @ Class 3 -->
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Class 3</h5>
+                <h6 class="card-subtitle mb-2 text-muted">International Trade</h6>
+                <p class="card-text">Description</p>
+              </div>
+              <div class="card-footer border-top-0 bg-transparent text-center">
+
+                <a class="btn btn-dark btn-sm download-button">Slides</a>
+                <a class="btn btn-danger btn-sm download-button">Recording</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- @ Class 4 -->
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Class 4</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Markets and Competition</h6>
+                <p class="card-text">Description</p>
+              </div>
+              <div class="card-footer border-top-0 bg-transparent text-center">
+
+                <a class="btn btn-dark btn-sm download-button">Slides</a>
+                <a class="btn btn-danger btn-sm download-button">Recording</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- @EAF2010 -->
+      <div class="course-container">
+        <h3 class="course-title"> EAF2010 - Math Applications for Economics and Business (in Spanish)</h3>
+
+        <!-- @Class 1 -->
+        <div class="row row-cols-2 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Chapter 0: Calculus review</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Class 1 : Multivariable Calculus</h6>
+                <p class="card-text">Description</p>
+              </div>
+              <div class="card-footer border-top-0 bg-transparent text-center">
+
+                <a class="btn btn-dark btn-sm download-button">Slides</a>
+                <a class="btn btn-danger btn-sm download-button">Recording</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- @ Class 2 -->
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Chapter 1: Comparative Statics</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Class 1 : Comparative Statics tools</h6>
+                <p class="card-text">Description</p>
+              </div>
+              <div class="card-footer border-top-0 bg-transparent text-center">
+
+                <a class="btn btn-dark btn-sm download-button">Slides</a>
+                <a class="btn btn-danger btn-sm download-button">Recording</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- @ Class 3 -->
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Chapter 1: Comparative Statics</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Class 2 : Homogeneous and Homothetic Functions</h6>
+                <p class="card-text">Description</p>
+              </div>
+              <div class="card-footer border-top-0 bg-transparent text-center">
+
+                <a class="btn btn-dark btn-sm download-button">Slides</a>
+                <a class="btn btn-danger btn-sm download-button">Recording</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- @ Class 4 -->
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Chapter 3: Unconstrained Optimization</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Class 1 : First order conditions</h6>
+                <p class="card-text">Description</p>
+              </div>
+              <div class="card-footer border-top-0 bg-transparent text-center">
+
+                <a class="btn btn-dark btn-sm download-button">Slides</a>
+                <a class="btn btn-danger btn-sm download-button">Recording</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--
         <div class="accordion" id="eae105a">
-          <!-- @Class 1 -->
+          <!- - @Class 1 - ->
           <div class="accordion-item">
             <h2 class="accordion-header" id="eae105a-class1-title">
               <button class="accordion-button collapsed class-title" type="button" data-bs-toggle="collapse" data-bs-target="#eae105a-class1-content" aria-expanded="false" aria-controls="eae105a-class1">
@@ -88,7 +227,7 @@
             </div>
           </div>
 
-          <!-- @Class 2 -->
+          <!- - @Class 2 - ->
           <div class="accordion-item">
             <h2 class="accordion-header" id="eae105a-class2-title">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#eae105a-class2-content" aria-expanded="false" aria-controls="eae105a-class2">
@@ -104,7 +243,7 @@
             </div>
           </div>
 
-          <!-- @Class 3 -->
+          <!- - @Class 3 - ->
           <div class="accordion-item">
             <h2 class="accordion-header" id="eae105a-class3-title">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#eae105a-class3-content" aria-expanded="false" aria-controls="eae105a-class3">
@@ -120,8 +259,7 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
+      -->
 
 
   </section>
