--- a/index.html
+++ b/index.html
@@ -41,16 +41,9 @@
       <div class="collapse navbar-collapse" id="navbarToggler">
 
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="active nav-link" href="#about-me">About me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#research">Research</a>
-          </li>
-          <li class="nav-item">
+            <a class="active nav-link scroll-link" href="#about-me">About me</a>
+            <a class="nav-link scroll-link" href="#research">Research</a>
             <a class="nav-link" href="teaching.html">Teaching</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="coursework.html">Coursework</a>
           </li>
         </ul>
@@ -144,48 +137,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <!-- @ Additional Scripts -->
-  <script>
-  $(document).ready(function(){
-    // Add smooth scrolling to all links
-    $("a").on('click', function(event) {
-
-      // Make sure this.hash has a value before overriding default behavior
-      if (this.hash !== "") {
-        // Prevent default anchor click behavior
-        event.preventDefault();
-
-        // Store hash
-        var hash = this.hash;
-
-        // Using jQuery's animate() method to add smooth page scroll
-        // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-        $('html, body').animate({
-          scrollTop: $(hash).offset().top
-        }, 400, function(){
-
-          // Add hash (#) to URL when done scrolling (default click behavior)
-          window.location.hash = hash;
-        });
-      } // End if
-    });
-  });
-  </script>
-
-  <!-- @Collapse NavBar on click -->
-  <script type="text/javascript">
-    const navLinks = document.querySelectorAll('.nav-item:not(.dropdown)')
-    const menuToggle = document.getElementById('navbarToggler')
-    const bsCollapse = new bootstrap.Collapse(menuToggle, {
-      toggle: false
-    })
-    navLinks.forEach(function(l) {
-      l.addEventListener('click', function() { // avoid flickering on desktop
-        if (menuToggle.classList.contains('show')) {
-          bsCollapse.toggle()
-        }
-      })
-    })
-  </script>
-</body>
+  <script src="scripts.js"> </script></body>
 
 </html>
