--- a/coursework.html
+++ b/coursework.html
@@ -28,33 +28,25 @@
 <body>
 
   <!-- @ Nav Bar -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark navbar-coloration">
+  <nav class="navbar fixed-top navbar-expand-md navbar-dark navbar-coloration">
 
     <div class="container-fluid">
 
-      <a class="navbar-brand" href="">
+      <a class="navbar-brand" href="index.html">
         <h3>Felipe del Canto</h3>
       </a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarToggler">
 
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html#about-me">About me</a>
-          </li>
-          <li class="nav-item">
+            <a class="nav-link" href="index.html#about-me">About me</a>
             <a class="nav-link" href="index.html#research">Research</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="teaching.html">Teaching</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="coursework.html">Coursework</a>
-          </li>
+            <a class="active nav-link" href="coursework.html">Coursework</a>
         </ul>
       </div>
     </div>
@@ -71,17 +63,24 @@
   </section>
 
 
-    <!-- @Footer -->
-    <footer class="centered-section" id="footer">
-      <div class="container-fluid">
-        <p>© 2021 Felipe del Canto</p>
-    </footer>
+  <!-- @Footer -->
+  <footer class="centered-section" id="footer">
+    <div class="container-fluid">
+      <p>© 2021 Felipe del Canto</p>
+  </footer>
 
 
 
-    <!-- @JS and Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  <!-- @JS and Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+  <!-- @jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <!-- @ Additional Scripts -->
+  <script src="scripts.js">  </script>
+
 
 </body>
 
