--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
   <!--@ Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
+  <!-- @Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar-spy-scroll" data-bs-offset="250" data-bs-method="offset">
 
   <!-- @ Nav Bar -->
-  <nav class="navbar fixed-top navbar-expand-md navbar-dark navbar-coloration">
+  <nav class="navbar fixed-top navbar-expand-md navbar-coloration">
 
     <div class="container-fluid" id="navbar-spy-scroll">
 
-      <a class="navbar-brand" href="">
-        <h3>Felipe del Canto</h3>
-      </a>
+      <a class="navbar-brand" href=""> Felipe del Canto</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-expanded="false">
         <span class="navbar-toggler-icon"></span>
@@ -41,10 +43,10 @@
       <div class="collapse navbar-collapse" id="navbarToggler">
 
         <ul class="navbar-nav ms-auto">
-            <a class="active nav-link scroll-link" href="#about-me">About me</a>
-            <a class="nav-link scroll-link" href="#research">Research</a>
-            <a class="nav-link" href="teaching.html">Teaching</a>
-            <a class="nav-link" href="coursework.html">Coursework</a>
+          <a class="active nav-link scroll-link" href="#about-me">About me</a>
+          <a class="nav-link scroll-link" href="#research">Research</a>
+          <a class="nav-link" href="teaching.html">Teaching</a>
+          <a class="nav-link" href="coursework.html">Coursework</a>
           </li>
         </ul>
       </div>
@@ -68,7 +70,7 @@
       </div>
 
       <div class="about-me-text col-lg-7 col-md-6">
-        <p> I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        <p>I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
         </p>
 
         <p>In particular, I am looking to study: 1) the use of
@@ -92,7 +94,7 @@
           <div class="mr-auto paper-title">
             <a class="paper-link"
               href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwi20O2Yk530AhWukHIEHS_hBVoQFnoECAkQAQ&url=https%3A%2F%2Flink.springer.com%2Farticle%2F10.1007%2Fs11750-020-00578-7&usg=AOvVaw39uCs8L6jrjrceWZHTlXiB">
-              <h5>The effect of regularization in portfolio selection problems</h5>
+              The effect of regularization in portfolio selection problems
             </a>
           </div>
           <div class="mr-auto paper-collaborators">
@@ -137,6 +139,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <!-- @ Additional Scripts -->
-  <script src="scripts.js"> </script></body>
+  <script src="scripts.js"> </script>
+</body>
 
 </html>
