--- a/teaching.html
+++ b/teaching.html
@@ -23,12 +23,18 @@
   <!--@ Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
+  <!-- @Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+</head>
+
 </head>
 
 <body>
 
   <!-- @ Nav Bar -->
-  <nav class="navbar fixed-top navbar-expand-md navbar-dark navbar-coloration">
+  <nav class="navbar fixed-top navbar-expand-md navbar-coloration">
 
     <div class="container-fluid">
 
