Fixing margins, added toggler animation

--- a/coursework.html
+++ b/coursework.html
@@ -26,7 +26,7 @@
   <!-- @Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 </head>
@@ -38,12 +38,12 @@
 
     <div class="container-fluid">
 
-      <a class="navbar-brand" href="index.html">
-        <h3>Felipe del Canto</h3>
-      </a>
+      <a class="navbar-brand" href="index.html">Felipe del Canto</a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler custom-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
+        <span class="toggler-icon top-bar"></span>
+        <span class="toggler-icon middle-bar"></span>
+        <span class="toggler-icon bottom-bar"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarToggler">
