--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
   <!-- @Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&family=Ubuntu:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet"> -->
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar-spy-scroll" data-bs-offset="250" data-bs-method="offset">
@@ -36,8 +39,10 @@
 
       <a class="navbar-brand" href=""> Felipe del Canto</a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-expanded="false">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler custom-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-expanded="false">
+        <span class="toggler-icon top-bar"></span>
+        <span class="toggler-icon middle-bar"></span>
+        <span class="toggler-icon bottom-bar"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarToggler">
@@ -70,9 +75,39 @@
       </div>
 
       <div class="about-me-text col-lg-7 col-md-6">
-        <p>I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        <!-- <p class="lato fw-300"> (Lato, fw-300) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
         </p>
 
+        <p class="lato fw-400"> (Lato, fw-400) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        </p>
+
+        <p class="merriweather fw-300"> (Merriweather Sans, fw-300) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        </p>
+
+        <p class="merriweather fw-400"> (Merriweather Sans, fw-400) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        </p>
+
+        <p class="montserrat fw-300"> (Montserrat, fw-300) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        </p>
+
+        <p class="montserrat fw-400"> (Montserrat, fw-400) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        </p>
+
+        <p class="open-sans fw-300"> (Open Sans, fw-300) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        </p>
+
+        <p class="open-sans fw-400"> (Open Sans, fw-400) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        </p>
+
+        <p class="ubuntu fw-300"> (Ubuntu, fw-300) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        </p>
+
+        <p class="ubuntu fw-400"> (Ubuntu, fw-400) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        </p> -->
+
+
+        <p>I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        </p>
         <p>In particular, I am looking to study: 1) the use of
           state-of-the-art Machine and Deep learning algorithms to make sense of unstructured data like text, images, videos, or sounds; 2) learn how to make causal inference with these tools, and 3) understand the role of these techniques in our
           society, specifically how they preserve our biases.
@@ -89,6 +124,36 @@
       <div class="research-subsection">
 
         <h1 class="section-title">Published Papers</h1>
+
+        <div class="research-element">
+          <div class="mr-auto paper-title">
+            <a class="paper-link"
+              href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwi20O2Yk530AhWukHIEHS_hBVoQFnoECAkQAQ&url=https%3A%2F%2Flink.springer.com%2Farticle%2F10.1007%2Fs11750-020-00578-7&usg=AOvVaw39uCs8L6jrjrceWZHTlXiB">
+              The effect of regularization in portfolio selection problems
+            </a>
+          </div>
+          <div class="mr-auto paper-collaborators">
+            with <a class="collaborator-link" href="https://www.researchgate.net/profile/Bernardo-Pagnoncelli">Bernardo Pagnoncelli</a> and <a class="collaborator-link" href="https://arturocifuentes.com/">Arturo Cifuentes</a>
+          </div>
+          <div class="mr-auto paper-journal">
+            <i>TOP</i>, Volume 29, 2021, Pages 156-176
+          </div>
+        </div>
+
+        <div class="research-element">
+          <div class="mr-auto paper-title">
+            <a class="paper-link"
+              href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwi20O2Yk530AhWukHIEHS_hBVoQFnoECAkQAQ&url=https%3A%2F%2Flink.springer.com%2Farticle%2F10.1007%2Fs11750-020-00578-7&usg=AOvVaw39uCs8L6jrjrceWZHTlXiB">
+              The effect of regularization in portfolio selection problems
+            </a>
+          </div>
+          <div class="mr-auto paper-collaborators">
+            with <a class="collaborator-link" href="https://www.researchgate.net/profile/Bernardo-Pagnoncelli">Bernardo Pagnoncelli</a> and <a class="collaborator-link" href="https://arturocifuentes.com/">Arturo Cifuentes</a>
+          </div>
+          <div class="mr-auto paper-journal">
+            <i>TOP</i>, Volume 29, 2021, Pages 156-176
+          </div>
+        </div>
 
         <div class="research-element">
           <div class="mr-auto paper-title">
