--- a/teaching.html
+++ b/teaching.html
@@ -26,7 +26,7 @@
   <!-- @Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 </head>
@@ -38,12 +38,12 @@
 
     <div class="container-fluid">
 
-      <a class="navbar-brand" href="index.html">
-        <h3>Felipe del Canto</h3>
-      </a>
+      <a class="navbar-brand" href="index.html">Felipe del Canto</a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler custom-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
+        <span class="toggler-icon top-bar"></span>
+        <span class="toggler-icon middle-bar"></span>
+        <span class="toggler-icon bottom-bar"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarToggler">
@@ -81,7 +81,6 @@
               <div class="card-footer border-top-0 bg-transparent text-center">
 
                 <a class="btn btn-dark btn-sm download-button">Slides</a>
-                <a class="btn btn-danger btn-sm download-button">Recording</a>
               </div>
             </div>
           </div>
@@ -97,7 +96,6 @@
               <div class="card-footer border-top-0 bg-transparent text-center">
 
                 <a class="btn btn-dark btn-sm download-button">Slides</a>
-                <a class="btn btn-danger btn-sm download-button">Recording</a>
               </div>
             </div>
           </div>
@@ -113,7 +111,6 @@
               <div class="card-footer border-top-0 bg-transparent text-center">
 
                 <a class="btn btn-dark btn-sm download-button">Slides</a>
-                <a class="btn btn-danger btn-sm download-button">Recording</a>
               </div>
             </div>
           </div>
@@ -129,7 +126,6 @@
               <div class="card-footer border-top-0 bg-transparent text-center">
 
                 <a class="btn btn-dark btn-sm download-button">Slides</a>
-                <a class="btn btn-danger btn-sm download-button">Recording</a>
               </div>
             </div>
           </div>
@@ -152,7 +148,6 @@
               <div class="card-footer border-top-0 bg-transparent text-center">
 
                 <a class="btn btn-dark btn-sm download-button">Slides</a>
-                <a class="btn btn-danger btn-sm download-button">Recording</a>
               </div>
             </div>
           </div>
@@ -168,7 +163,6 @@
               <div class="card-footer border-top-0 bg-transparent text-center">
 
                 <a class="btn btn-dark btn-sm download-button">Slides</a>
-                <a class="btn btn-danger btn-sm download-button">Recording</a>
               </div>
             </div>
           </div>
@@ -184,7 +178,6 @@
               <div class="card-footer border-top-0 bg-transparent text-center">
 
                 <a class="btn btn-dark btn-sm download-button">Slides</a>
-                <a class="btn btn-danger btn-sm download-button">Recording</a>
               </div>
             </div>
           </div>
@@ -200,7 +193,6 @@
               <div class="card-footer border-top-0 bg-transparent text-center">
 
                 <a class="btn btn-dark btn-sm download-button">Slides</a>
-                <a class="btn btn-danger btn-sm download-button">Recording</a>
               </div>
             </div>
           </div>
