Remove gutter from #about-me .row

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <section class="centered-section" id="about-me">
 
     <!-- @ About me -->
-    <div class="row container-fluid section-container">
+    <div class="row g-0 container-fluid section-container">
 
       <div class="image-container col-lg-5 col-md-6">
         <img class="title-image" src="images/felipe.png" alt="Felipe profile picture">
@@ -104,7 +104,6 @@
 
         <p class="ubuntu fw-400"> (Ubuntu, fw-400) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
         </p> -->
-
 
         <p>I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
         </p>
