Add documents and complete Research Section

--- a/teaching.html
+++ b/teaching.html
@@ -70,18 +70,19 @@
         <h3 class="course-title"> EAE105A - Principles of Economics (in Spanish)</h3>
 
         <!-- @Class 1 -->
-        <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card h-100">
               <div class="card-body">
-                <h5 class="card-title">Class 1</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Motivation</h6>
-                <!-- <p class="card-text">Description</p> -->
+                <h5 class="card-title">Part I: Introduction</h5>
+                <p class="card-text">Introduction to the elemental concepts and simple models in Economics.</p>
               </div>
-              <div class="card-footer border-top-0 bg-transparent text-center">
-
-                <a class="btn btn-dark btn-sm download-button">Slides</a>
-              </div>
+              <ul class="list-group list-group-flush">
+                <li class="d-flex list-group-item">
+                  <div class="flex-grow-1"> Class 1: Motivation </div>
+                  <div class="download-button"> <a class="btn btn-dark btn-sm">Slides</a> </div>
+                </li>
+              </ul>
             </div>
           </div>
 
