--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
   <!-- @Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&family=Ubuntu:wght@300;400;500;700&display=swap"
-    rel="stylesheet">
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar-spy-scroll" data-bs-offset="250" data-bs-method="offset">
@@ -75,38 +72,9 @@
       </div>
 
       <div class="about-me-text col-lg-7 col-md-6">
-        <!-- <p class="lato fw-300"> (Lato, fw-300) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        <p> I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
         </p>
 
-        <p class="lato fw-400"> (Lato, fw-400) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
-        </p>
-
-        <p class="merriweather fw-300"> (Merriweather Sans, fw-300) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
-        </p>
-
-        <p class="merriweather fw-400"> (Merriweather Sans, fw-400) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
-        </p>
-
-        <p class="montserrat fw-300"> (Montserrat, fw-300) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
-        </p>
-
-        <p class="montserrat fw-400"> (Montserrat, fw-400) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
-        </p>
-
-        <p class="open-sans fw-300"> (Open Sans, fw-300) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
-        </p>
-
-        <p class="open-sans fw-400"> (Open Sans, fw-400) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
-        </p>
-
-        <p class="ubuntu fw-300"> (Ubuntu, fw-300) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
-        </p>
-
-        <p class="ubuntu fw-400"> (Ubuntu, fw-400) I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
-        </p> -->
-
-        <p>I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
-        </p>
         <p>In particular, I am looking to study: 1) the use of
           state-of-the-art Machine and Deep learning algorithms to make sense of unstructured data like text, images, videos, or sounds; 2) learn how to make causal inference with these tools, and 3) understand the role of these techniques in our
           society, specifically how they preserve our biases.
