--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Felipe del Canto</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <meta name="description" content="Felipe del Canto's personal page. Mathematician and Economist. My main interests are in the intersection between Computer Science and Economics.">
   <meta name="keywords" content="Felipe, del Canto, Economics, Chile, Computer Science, Econ, CS">
 
@@ -34,7 +33,7 @@
 
     <div class="container-fluid" id="navbar-spy-scroll">
 
-      <a class="navbar-brand" href=""> Felipe del Canto</a>
+      <a class="navbar-brand" href=""> <h1> Felipe del Canto </h1> </a>
 
       <button class="navbar-toggler custom-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-expanded="false">
         <span class="toggler-icon top-bar"></span>
@@ -62,7 +61,7 @@
     <div class="row g-0 container-fluid section-container">
 
       <div class="image-container col-lg-5 col-md-6">
-        <img class="title-image" src="images/felipe.png" alt="Felipe profile picture">
+        <img class="title-image" src="images/felipe.jpg" alt="Felipe del Canto">
 
         <div class="personal-icons">
           <a href="http://github.com/pipeton8"><i class="personal-icon fab fa-github fa-lg"></i></a>
